aau/sf_autobackup/objects/Bus_Stop_Schedule__c.object
<CustomObject>
    <description>Link between bus route and stop with scheduled time</description>
    <fields>
        <fullName>Bus_Route__c</fullName>
        <label>Bus Route</label>
        <referenceTo>Bus_Route__c</referenceTo>
        <relationshipLabel>Bus Stop Schedules</relationshipLabel>
        <relationshipName>Bus_Stop_Schedules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Bus_Stop__c</fullName>
        <label>Bus Stop</label>
        <referenceTo>Bus_Stop__c</referenceTo>
        <relationshipLabel>Bus Stop Schedules</relationshipLabel>
        <relationshipName>Bus_Stop_Schedules</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Route__c</fullName>
        <description>This is the instance of the Route.  There could be two buses on the route at the same time, but at different places in the route.  This reflect which bus is which</description>
        <inlineHelpText>This is the instance of the Route.  There could be two buses on the route at the same time, but at different places in the route.  This reflect which bus is which</inlineHelpText>
        <label>Sub Route</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time_Value__c</fullName>
        <formula>IF(
	RIGHT(Time__c, 2) == &apos;PM&apos;,
	IF(
		VALUE(SUBSTITUTE(SUBSTITUTE(Time__c, &apos;:&apos;, &apos;.&apos;), &apos; PM&apos;, &apos;&apos;)) &gt;= 12,
		IF(
			VALUE(SUBSTITUTE(SUBSTITUTE(Time__c, &apos;:&apos;, &apos;.&apos;), &apos; PM&apos;, &apos;&apos;)) &lt; 13,
			VALUE(SUBSTITUTE(SUBSTITUTE(Time__c, &apos;:&apos;, &apos;.&apos;), &apos; PM&apos;, &apos;&apos;)),
			null
		),
		VALUE(SUBSTITUTE(SUBSTITUTE(Time__c, &apos;:&apos;, &apos;.&apos;), &apos; PM&apos;, &apos;&apos;)) + 12
	),
	IF(
		RIGHT(Time__c, 2) == &apos;AM&apos;,
		IF(
			VALUE(SUBSTITUTE(SUBSTITUTE(Time__c, &apos;:&apos;, &apos;.&apos;), &apos; AM&apos;, &apos;&apos;)) &gt;= 12,
			IF(
				VALUE(SUBSTITUTE(SUBSTITUTE(Time__c, &apos;:&apos;, &apos;.&apos;), &apos; AM&apos;, &apos;&apos;)) &lt; 13,
				VALUE(SUBSTITUTE(SUBSTITUTE(Time__c, &apos;:&apos;, &apos;.&apos;), &apos; AM&apos;, &apos;&apos;)) - 12,
				null
			),
			VALUE(SUBSTITUTE(SUBSTITUTE(Time__c, &apos;:&apos;, &apos;.&apos;), &apos; AM&apos;, &apos;&apos;))
		),
		null
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Bus Stop Schedule</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Order__c</columns>
        <columns>Bus_Stop__c</columns>
        <columns>Bus_Route__c</columns>
        <columns>Sub_Route__c</columns>
        <columns>Time__c</columns>
        <columns>Time_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Route_E</fullName>
        <columns>NAME</columns>
        <columns>Order__c</columns>
        <columns>Bus_Stop__c</columns>
        <columns>Bus_Route__c</columns>
        <columns>Sub_Route__c</columns>
        <columns>Time__c</columns>
        <columns>Time_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Bus_Route__c</field>
            <operation>startsWith</operation>
            <value>E</value>
        </filters>
        <label>All Route E</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Route_I</fullName>
        <columns>NAME</columns>
        <columns>Order__c</columns>
        <columns>Bus_Stop__c</columns>
        <columns>Bus_Route__c</columns>
        <columns>Sub_Route__c</columns>
        <columns>Time__c</columns>
        <columns>Time_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Bus_Route__c</field>
            <operation>startsWith</operation>
            <value>I</value>
        </filters>
        <label>Route I</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Route_M</fullName>
        <columns>NAME</columns>
        <columns>Order__c</columns>
        <columns>Bus_Stop__c</columns>
        <columns>Bus_Route__c</columns>
        <columns>Sub_Route__c</columns>
        <columns>Time__c</columns>
        <columns>Time_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Bus_Route__c</field>
            <operation>startsWith</operation>
            <value>M</value>
        </filters>
        <label>Route M</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Route_Polk_Nrpnt</fullName>
        <columns>NAME</columns>
        <columns>Order__c</columns>
        <columns>Bus_Stop__c</columns>
        <columns>Bus_Route__c</columns>
        <columns>Sub_Route__c</columns>
        <columns>Time__c</columns>
        <columns>Time_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Bus_Route__c</field>
            <operation>startsWith</operation>
            <value>Polk Nrpnt</value>
        </filters>
        <label>Route Polk Nrpnt</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Bus Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bus Stop Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>